app/assets/stylesheets/objectmenu.scss
#product-top-menu {
	margin-left: auto;
	margin-right: auto;
}

.jumbotron#brand {
	background-image: asset-url('/assets/background.gif');
	background-size: cover;
	height: 500px;
	overflow: auto;
}

#product-detail {
	margin-top: 10px;
	width: 250px;
	height: 30px;
	background-color: #80bfff;
	color: white;
	font-weight: bold;
	font-size: 1.2em;
}

div#create-brand {
	display: none;
}

#menu-header {
	color: white;
}

ul#brand-list {
	margin-top: 10px;
	width: 40%;
	-moz-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
	-webkit-box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
	box-shadow: 0 2px 3px 0px rgba(0, 0, 0, 0.5);
	z-index: 999999;
}

li#brand-list-item {
	background-color: #80bfff;
	border: none;
	font-weight: bold;
	text-decoration: none;
	border-top: 1px solid #e6e6e6;
}

.pagination {
	background-color: #80bfff;
}

